--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-
-
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.2.0"
+    implementation 'com.google.android.material:material:1.3.0-alpha04'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
