--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shelter">
-        <activity android:name=".activities.EditorActivity"></activity>
-        <activity android:name=".activities.CatalogActivity" />
+        <activity
+            android:name=".activities.EditorActivity"
+            android:label="@string/editor_activity_title_new_pet"
+            android:theme="@style/EditorTheme">
+        </activity>
+        <activity
+            android:name=".activities.CatalogActivity"
+            android:label="@string/app_name">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN"/>
+            <category android:name="android.intent.category.LAUNCHER"/>
+        </intent-filter>
+        </activity>
     </application>
 
 </manifest>
